2000-05-15  Sam Steingold  <sds@gnu.org>

	* makemake.in: fixed the previous patch.

2000-05-12  Martin Atzmueller  <marty@cs.utexas.edu>

	* makemake.in: link clhs in the build-directory to the right place.

2000-05-11  Sam Steingold  <sds@gnu.org>

	* stream.d (socket_status): use HANDLE_SET & HANDLE_ISSET macros.
	* ../doc/impext.xml: document LISP:SOCKET-STATUS.

2000-05-09  Sam Steingold  <sds@gnu.org>

	* stream.d (sec_usec): new helper function.
	(socket_wait): use it.
	(socket_status): new Lisp function: interface to select(3).
	(stream_listen): listen properly on binary streams too.
	* constsym.d, subr.d: added LISP:SOCKET-STATUS.

2000-05-09  Sam Steingold  <sds@gnu.org>

	* disassem.lisp (disassemble-machine-code): do not call
	the pager when running under Emacs.

2000-05-03  Guilherme Manika  <gwm@conectiva.com.br>

	* makemake.in (install-bin): Fix duplicate \$(install_root).

2000-04-25  Bruno Haible  <haible@linuix.math.u-bordeaux.fr>

        * spvw.d (print_license): Add paragraph pointing to copyright.html.

2000-04-18  Bruno Haible  <haible@linuix.math.u-bordeaux.fr>

        * lispbibl.d: On BeOS, define UTF8_CHS, not ISOLATIN_CHS.
        * encoding.d (encoding_from_name): If UTF8_CHS is defined, use
          CHARSET:UTF-8.

2000-04-14  Bruno Haible  <haible@linuix.math.u-bordeaux.fr>

        * autoconf/aclocal.m4 (CL_PROG_HLN): Redirect ln's error output.

2000-04-13  Bruno Haible  <haible@linuix.math.u-bordeaux.fr>

        Support NO_TYPECODES on m68k.
        * lispbibl.d (oint_type_*, oint_data_*): Define differently on
          m68k-linux.
          (subr_): Add a dummy field to force size a multiple of 4.
          (TheMachineCode): After shifting right, add the missing leftmost
          bits.
        * spvw.d (main): When determining the heap bounds, compute 'end' with
          garcol_bit set to 0, even if garcol_bit_o < oint_addr_len-1.
        * encoding.d (nls_table) [NO_TYPECODES]: Force variables of this type,