@@ -1,5 +1,9 @@
 2000-05-15  Sam Steingold  <sds@gnu.org>
 
+	* socket.d (H_ERRMSG): fixed duplicate test for NO_DATA.
+
+2000-05-15  Sam Steingold  <sds@gnu.org>
+
 	* makemake.in: fixed the previous patch.
 
 2000-05-12  Martin Atzmueller  <marty@cs.utexas.edu>
